tmp/package-mdapi-check/objects/NF_Form_Element__c.object
<CustomObject>
    <description>UI and layout elements for a TwinaForms form version.</description>
    <label>NF Form Element</label>
    <nameField>
        <displayFormat>ELM-{0000}</displayFormat>
        <label>Element Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NF Form Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Config_JSON__c</fullName>
        <description>Element-specific configuration JSON.</description>
        <inlineHelpText>Stores flexible element configuration such as options, visibility, rows, layout settings, and repeat-group metadata.</inlineHelpText>
        <label>Config JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Element_Id__c</fullName>
        <description>Stable runtime element id used in generated HTML.</description>
        <inlineHelpText>Runtime element id.</inlineHelpText>
        <label>Element Id</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Element_Index__c</fullName>
        <description>Stable per-form element sequence number carried across versions.</description>
        <inlineHelpText>Automatically assigned sequence number for this form element across all versions of the same form.</inlineHelpText>
        <label>Element Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Element_Type__c</fullName>
        <description>Element type used by the TwinaForms runtime.</description>
        <inlineHelpText>Choose the element type.</inlineHelpText>
        <label>Element Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>heading</fullName>
                    <default>true</default>
                    <label>Heading</label>
                </value>
                <value>
                    <fullName>text</fullName>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>input</fullName>
                    <label>Input</label>
                </value>
                <value>
                    <fullName>textarea</fullName>
                    <label>Textarea</label>
                </value>
                <value>
                    <fullName>number</fullName>
                    <label>Number</label>
                </value>
                <value>
                    <fullName>date</fullName>
                    <label>Date</label>
                </value>
                <value>
                    <fullName>time</fullName>
                    <label>Time</label>
                </value>
                <value>
                    <fullName>email</fullName>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>tel</fullName>
                    <label>Phone</label>
                </value>
                <value>
                    <fullName>url</fullName>
                    <label>URL</label>
                </value>
                <value>
                    <fullName>select</fullName>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>multiCheckbox</fullName>
                    <label>Multi Checkbox</label>
                </value>
                <value>
                    <fullName>lookup</fullName>
                    <label>Lookup</label>
                </value>
                <value>
                    <fullName>location</fullName>
                    <label>Country / State / City</label>
                </value>
                <value>
                    <fullName>checkbox</fullName>
                    <label>Checkbox</label>
                </value>
                <value>
                    <fullName>radio</fullName>
                    <label>Radio</label>
                </value>
                <value>
                    <fullName>ranking</fullName>
                    <label>Ranking</label>
                </value>
                <value>
                    <fullName>fileUpload</fullName>
                    <label>File Upload</label>
                </value>
                <value>
                    <fullName>signature</fullName>
                    <label>Signature</label>
                </value>
                <value>
                    <fullName>mergedDocument</fullName>
                    <label>Merged Document</label>
                </value>
                <value>
                    <fullName>image</fullName>
                    <label>Image</label>
                </value>
                <value>
                    <fullName>button</fullName>
                    <label>Button</label>
                </value>
                <value>
                    <fullName>section</fullName>
                    <label>Section</label>
                </value>
                <value>
                    <fullName>group</fullName>
                    <label>Group</label>
                </value>
                <value>
                    <fullName>columns</fullName>
                    <label>Columns</label>
                </value>
                <value>
                    <fullName>hidden</fullName>
                    <label>Hidden</label>
                </value>
                <value>
                    <fullName>repeatGroup</fullName>
                    <label>Repeat Group</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Key__c</fullName>
        <description>Runtime field key used in the form input object.</description>
        <inlineHelpText>Input key such as email or contactId.</inlineHelpText>
        <label>Field Key</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Version__c</fullName>
        <description>Parent form version for this element.</description>
        <inlineHelpText>Form version that owns this element.</inlineHelpText>
        <label>Form Version</label>
        <referenceTo>NF_Form_Version__c</referenceTo>
        <relationshipLabel>Form Elements</relationshipLabel>
        <relationshipName>FormElements</relationshipName>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>Primary display label for the element.</description>
        <inlineHelpText>Display label.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Render order of the element inside the form version.</description>
        <inlineHelpText>Render order.</inlineHelpText>
        <label>Order</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Element_Id__c</fullName>
        <description>Optional parent element id for nested layouts.</description>
        <inlineHelpText>Parent element id for nesting or grouping.</inlineHelpText>
        <label>Parent Element Id</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Debug_All_Records</fullName>
        <columns>NAME</columns>
        <columns>Form_Version__c</columns>
        <columns>Element_Id__c</columns>
        <columns>Element_Type__c</columns>
        <columns>Field_Key__c</columns>
        <columns>Label__c</columns>
        <columns>Order__c</columns>
        <columns>Parent_Element_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>Debug - All Records</label>
    </listViews>
</CustomObject>